enhanced for multiple monitors // e.t.c

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -13,19 +13,30 @@ source = ~/.config/hypr/keybinds.conf
 # █▀▄▀█ █▀█ █▄░█ █ ▀█▀ █▀█ █▀█
 # █░▀░█ █▄█ █░▀█ █ ░█░ █▄█ █▀▄
 
-# monitor = DP-1,1366x768@60,0x0,1
-monitor = ,preferred,auto,auto
+monitor = DP-1,1920x1080@144,0x0,auto
+monitor = DVI-D-1,1920x1080@60,1920x0,auto
 
+workspace=1, monitor:DP-1, persistent:true, default:false
+workspace=2, monitor:DP-1, persistent:true, default:false
+workspace=3, monitor:DP-1, persistent:true, default:false
+workspace=4, monitor:DP-1, persistent:true, default:false
+workspace=5, monitor:DP-1, persistent:true, default:false
 
+workspace=6, monitor:DVI-D-1, persistent:true, default:false
+workspace=7, monitor:DVI-D-1, persistent:true, default:false
+workspace=8, monitor:DVI-D-1, persistent:true, default:false
+workspace=9, monitor:DVI-D-1, persistent:true, default:false
+workspace=10, monitor:DVI-D-1, persistent:true, default:false
 
 # █ █▄░█ █▀█ █░█ ▀█▀
 # █ █░▀█ █▀▀ █▄█ ░█░
 
 input {
-  kb_layout = latam # XKB layout
+  kb_layout = us,ru # XKB layout
   follow_mouse = 1 
   sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
   force_no_accel = 1
+  kb_options = grp:alt_shift_toggle
   # kb_model = cherryblue # XKB model
   # kb_variant = dvorak # XKB variant
   # numlock_by_default = false 
@@ -48,7 +59,6 @@ general {
   col.inactive_border = 0xff382D2E
   no_border_on_floating = false # enable border on float window
   layout = dwindle
-  no_cursor_warps = true
   # cursor_inactive_timeout = 0 
   # no_focus_fallback = false 
   # resize_on_border = false 
@@ -80,7 +90,7 @@ decoration {
 
   # █▀█ █▀█ █░█ █▄░█ █▀▄   █▀▀ █▀█ █▀█ █▄░█ █▀▀ █▀█
   # █▀▄ █▄█ █▄█ █░▀█ █▄▀   █▄▄ █▄█ █▀▄ █░▀█ ██▄ █▀▄
-  rounding = 0
+  rounding = 8
   # multisample_edges = true
 
   # █▀█ █▀█ ▄▀█ █▀▀ █ ▀█▀ █▄█
@@ -101,12 +111,14 @@ decoration {
 
   # █▀ █░█ ▄▀█ █▀▄ █▀█ █░█░█
   # ▄█ █▀█ █▀█ █▄▀ █▄█ ▀▄▀▄▀
-  drop_shadow = false
-  shadow_ignore_window = true
-  shadow_offset = 1 2
-  shadow_range = 10
-  shadow_render_power = 5
-  col.shadow = 0x66404040
+  shadow {
+  	enabled = true
+  	ignore_window = true
+  	offset = 1 2
+  	range = 10
+  	render_power = 5
+  	color = 0x66404040
+  }
 
   #blurls = gtk-layer-shell
   blurls = waybar
@@ -145,12 +157,11 @@ animations {
 # █▄▄ █▀█ ░█░ █▄█ █▄█ ░█░ ▄█
 
 dwindle {
-  no_gaps_when_only = false
   pseudotile = true # master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
   preserve_split = true # you probably want this
 }
 
 master {
     # See https://wiki.hyprland.org/Configuring/Master-Layout/ for more
-    new_is_master = true
+    new_status = master
 }
