--- a/.config/neofetch/config.conf
+++ b/.config/neofetch/config.conf
@@ -4,12 +4,12 @@ print_info() {
     # info title
     # info underline
     prin ""
-    prin "$(color 1)L I N U X  |  M O B I L E"
+    prin "$(color 1)R O S E N Y"
     prin _____________________
     info "" distro
       info "" model
-    # info "" cpu
-    # info "" gpu
+      info "" cpu
+      info "" gpu
       info "" memory
     # info "" kernel
       info "" packages
@@ -20,7 +20,6 @@ print_info() {
     #  prin "" "Hyprland"
     # info "" locale
     # info "" uptime
-      prin "" "github.com/linuxmobile"
   
 
     # info "GPU Driver" gpu_driver  # Linux/macOS only
