--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -16,10 +16,9 @@
         	"tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         	"format-alt": " {:%d/%m}"
 	},
-	
 
 	"hyprland/workspaces": {
-        "active-only": false,
+        "active-only": true,
         "all-outputs": true,
         "disable-scroll": false,
         "on-scroll-up": "hyprctl dispatch workspace -1",
