--- a/.config/hypr/keybinds.conf
+++ b/.config/hypr/keybinds.conf
@@ -20,7 +20,7 @@ $browser = brave
 bind = SUPER, v, exec, wf-recorder -f $(xdg-user-dir VIDEOS)/$(date +'%H:%M:%S_%d-%m-%Y.mp4')
 bind = SUPER SHIFT, v, exec, killall -s SIGINT wf-recorder
 bind = , Print, exec, $screenshot full
-bind = SUPERSHIFT, S, exec, $screenshot  area
+bind = SUPER SHIFT, S, exec, $screenshot  area
 
 # █▀▄▀█ █ █▀ █▀▀
 # █░▀░█ █ ▄█ █▄▄
@@ -28,6 +28,7 @@ bind = SUPER SHIFT, X, exec, $colorpicker
 bind = CTRL ALT, L, exec, swaylock
 bind = SUPER, Return, exec, $term
 bind = SUPER, E, exec, $files
+bind = SUPER, O, exec, $browser
 bind = SUPER, D, exec, killall rofi || rofi -show drun -theme ~/.config/rofi/config.rasi
 bind = SUPER, period, exec, killall rofi || rofi -show emoji -emoji-format "{emoji}" -modi emoji -theme ~/.config/rofi/global/emoji
 bind = SUPER SHIFT, B, exec, killall -SIGUSR2 waybar # Reload waybar
